--- a/public/breakin.css
+++ b/public/breakin.css
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Raleway"), local("Raleway-Regular"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-regular.woff2") format("woff2"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-regular.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Raleway Italic"), local("Raleway-Italic"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-italic.woff2") format("woff2"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-italic.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Raleway Bold"), local("Raleway-Bold"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-700.woff2") format("woff2"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-700.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-style: italic;
+  font-weight: 700;
+  src: local("Raleway Bold Italic"), local("Raleway-BoldItalic"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-700italic.woff2") format("woff2"), url("/wp-content/themes/q18/fonts/raleway-v11-latin-700italic.woff") format("woff");
+  font-display: swap;
+}
+
+body, button {
+  font-family: 'Raleway', 'Helvetica', 'Arial', sans-serif;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,6 +41,42 @@
 body {
   background: #fff;
   color: #333;
+  font-size: 16px;
+}
+
+dialog {
+  display: none;
+  border: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+dialog[open] {
+  display: flex;
+}
+
+.dialog-contents {
+  max-width: 960px;
+}
+
+dialog button {
+  font-size: 1.5rem;
+  padding: 1rem 3rem;
+  border: 1px solid #00862e;
+  border-radius: 1rem;
+  background: #ecffb8;
+  cursor: pointer;
+  background: linear-gradient(#fff, #ecffb8) #ecffb8;
+}
+
+dialog button:hover, dialog button:active, dialog button:focus {
+  box-shadow: inset 0px -2px 8px rgba(0,0,0,0.5);
 }
 
 template {
@@ -56,7 +128,6 @@ template {
   border: 0;
   padding: 0;
   margin: 4px 0;
-  cursor: pointer;
   opacity: 0.4;
   transition: opacity 300ms;
 }
