--- a/public/breakin.css
+++ b/public/breakin.css
@@ -151,7 +151,7 @@ dialog {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   flex-direction: column;
   align-items: center;
@@ -300,6 +300,28 @@ template, .digit-value {
 #score strong {
   font-size: 1.75rem;
   padding-right: 1.5rem;
+}
+
+th, td {
+  padding-top: 0.35em;
+  padding-bottom: 0.35em;
+}
+
+#lock-list tr:nth-child(2n) {
+  background: white;
+}
+
+#lock-list th {
+  text-align: left;
+}
+
+#lock-list td {
+  padding-inline: 1em;
+}
+
+#lock-list button {
+  font-size: 100%;
+  padding: 0.25rem 1rem;
 }
 
 footer {
